--- a/layout/footer.phtml
+++ b/layout/footer.phtml
@@ -1,4 +1,8 @@
 
+      </div>
+      <!-- #content -->
+    </div>
+    <!-- .container-fluid -->
   </div>
   <!-- #page -->
   <script src="<?= get_base_url('assets/js/jquery.js');?>"></script>
