--- a/layout/error/405.phtml
+++ b/layout/error/405.phtml
@@ -1,3 +1,11 @@
 <?php
 include __DIR__ .'/../header.phtml';
+?>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1 class="error-title">405</h1>
+            <h2 class="error-desc">Method <?=get_method();?> Tidak Diijinkan</h2>
+        </div>
+    </div>
+<?php
 include __DIR__ .'/../footer.phtml';
