--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,320 @@
 /**
  * app.css
  */
+body {
+    min-width: 320px;
+}
+
+/* CARD
+ -------------------------- */
+
+.card {
+    position: relative;
+    margin: .5em 0;
+}
+.card.no-margin {
+    margin:0;
+}
+.card:after,
+.card:before {
+    clear: both;
+    content: '';
+    display: table;
+}
+.card .card-header {
+    display: block;
+    padding: 10px;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.card.no-body .card-header {
+    border-bottom-width:0;
+    box-shadow: rgba(0, 0,0, .3) 0 2px 1px;
+}
+.card.no-body .card-header {
+    border-radius: 3px;
+}
+
+.card .card-body {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 4px;
+    background-color: #fff;
+    border-top: 1px solid rgba(0,0,0,.2);
+}
+.card.no-radius .card-header {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.card.no-radius .card-header,
+.card.no-radius .card-body {
+    border-radius: 0;
+}
+
+.card .card-header.fix-height-150 {
+    height: 150px;
+}
+.card .card-header.fix-height-200 {
+    height: 200px;
+}
+.card .card-header.fix-height-100 {
+    height: 100px;
+}
+
+/* CARD COLOR
+ ----------------- */
+.bg-clouds,
+.card.card-clouds .card-header,
+.card.card-default .card-header {
+    color: #444;
+    background-color: #ecf0f1;
+}
+.bg-turquoise,
+.card.card-turquoise .card-header {
+    color: #ecf0f1;
+    background-color: #1abc9c;
+}
+.bg-emerald,
+.card.card-emerald .card-header {
+    color: #ecf0f1;
+    background-color: #2ecc71;
+}
+.bg-peter,
+.card.card-peter .card-header {
+    color: #ecf0f1;
+    background-color: #3498db;
+}
+.bg-amethyst,
+.card.card-amethyst .card-header {
+    color: #ecf0f1;
+    background-color: #9b59b6;
+}
+.bg-asphalt,
+.card.card-asphalt .card-header {
+    color: #ecf0f1;
+    background-color: #34495e;
+}
+.bg-green-sea,
+.card.card-green-sea .card-header {
+    color: #ecf0f1;
+    background-color: #16a085;
+}
+.bg-nephritis,
+.card.card-nephritis .card-header {
+    color: #ecf0f1;
+    background-color: #27ae60;
+}
+.bg-belize,
+.card.card-belize .card-header {
+    color: #ecf0f1;
+    background-color: #2980b9;
+}
+.bg-wisteria,
+.card.card-wisteria .card-header {
+    color: #ecf0f1;
+    background-color: #8e44ad;
+}
+.bg-midnight-blue,
+.card.card-midnight-blue .card-header {
+    color: #ecf0f1;
+    background-color: #2c3e50;
+}
+.bg-sunflower,
+.card.card-sunflower .card-header {
+    color: #ecf0f1;
+    background-color: #f1c40f;
+}
+.bg-carrot,
+.card.card-carrot .card-header {
+    color: #ecf0f1;
+    background-color: #e67e22;
+}
+.bg-alizarin,
+.card.card-alizarin .card-header {
+    color: #ecf0f1;
+    background-color: #e74c3c;
+}
+.bg-concrete,
+.card.card-concrete .card-header {
+    color: #ecf0f1;
+    background-color: #95a5a6;
+}
+.bg-orange,
+.card.card-orange .card-header {
+    color: #ecf0f1;
+    background-color: #f39c12;
+}
+.bg-pumpkin,
+.card.card-pumpkin .card-header {
+    color: #ecf0f1;
+    background-color: #d35400;
+}
+.bg-pomer-granate,
+.card.card-pomer-granate .card-header {
+    color: #ecf0f1;
+    background-color: #c0392b;
+}
+.bg-silver,
+.card.card-silver .card-header {
+    color: #444;
+    background-color: #bdc3c7;
+}
+.bg-asbestos,
+.card.card-asbestos .card-header {
+    color: #fff;
+    background-color: #7f8c8d;
+}
+
+/* Apabila Belum Login
+ -------------------------- */
+body.tamu {
+    background-color: #34495e;
+}
+/* Content If Login
+ -------------------------- */
+.login #content {
+    margin-left: 200px;
+}
+#form-login {
+    margin-top: 22vh;
+}
+/* OVERRIDE
+ -------------------- */
+.panel-title {
+    letter-spacing: 1px;
+}
+/* SIDEBAR
+ -------------------------- */
+#sidebar {
+    position: fixed;
+    top:0;
+    left:0;
+    bottom: 0;
+    width: 200px;
+}
+
+#sidebar .navigation {
+    background-color: #34495e;
+    color: #fff;
+    padding:0;
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    overflow:visible;
+}
+
+#sidebar .navigation ul {
+    margin-bottom:0;
+    list-style: none;
+    padding: 0;
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+
+#sidebar .navigation > ul {
+    overflow-x:hidden;
+    position: absolute;
+    left:0;
+    right:0;
+    top:180px;
+    bottom:0;
+    padding: 10px 0 20px 0;
+    overflow-y: auto;
+}
+
+#sidebar .navigation ul li a {
+    padding: 8px 10px;
+    display:block;
+    color: #fff;
+    text-decoration: none;
+}
+#sidebar .navigation > ul > li > ul {
+    padding: 10px 0;
+    background-color: rgba(0,0,0, .2);
+}
+#sidebar .navigation > ul > li > ul {
+    display: none;
+}
+.no-js #sidebar .navigation > ul > li > ul,
+#sidebar .navigation > ul > li > ul.active {
+    display: block;
+}
+
+#sidebar .navigation ul ul li a {
+    padding-left: 15px;
+}
+
+.my-profile {
+    display: block;
+    padding: 20px 0;
+    height: 180px;
+    overflow:hidden;
+    position:relative;
+}
+.icon-big {
+    font-size: 4em;
+}
+.icon-big-smaller {
+    font-size: 3em;
+}
+.my-profile .profile-name {
+    padding: 5px 0;
+    font-size: 12px;
+}
+
+.my-profile  .text-button {
+    position: relative;
+    background-color: #95a5a6;
+    padding: 10px;
+    margin-bottom: 1em;
+}
+.my-profile  .text-button:after,
+.my-profile  .text-button:before {
+    clear: both;
+    display: table;
+    content: '';
+}
+.my-profile .text-button a {
+    text-align: center;
+    background-color: #34495e;
+    color: #fff;
+    padding: 5px 0;
+    border-radius: 3px;
+    text-decoration: none;
+    display: block;
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+
+.my-profile .text-button a.profile-logout {
+    text-align: center;
+    color: #fff;
+    background-color: #e74c3c;
+}
+
+/* TITLE MAP
+ -------------------------- */
+.title-map {
+    position:relative;
+    padding: 10px 0 15px;
+    border-bottom: 1px solid #ddd;
+    margin: 1em 0 .5em;
+}
+.title-map h1 {
+    color: #777;
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+
+/* ERROR
+ ------------------------- */
+
+.error-title {
+    font-size: 15em;
+    margin-top: 20vh;
+}
+.error-desc {
+    font-size: 1.5em;
+}
