--- a/layout/error/500.phtml
+++ b/layout/error/500.phtml
@@ -1,4 +1,14 @@
 <?php
 include __DIR__ .'/../header.phtml';
-print_r($variable['exception']->getMessage());
+?>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1 class="error-title">500</h1>
+            <h2 class="error-desc">Internal Server Error</h2>
+            <?php if (is_admin()) { ?>
+                <pre><?= !empty($variable['exception']) ? $variable['exception'] : '';?></pre>
+            <?php } ?>
+        </div>
+    </div>
+<?php
 include __DIR__ .'/../footer.phtml';
