--- a/layout/login.phtml
+++ b/layout/login.phtml
@@ -1,9 +1,5 @@
 <?php muat_layout('header', ['title' => 'Masuk Ke Dasbor']); ?>
-    <!-- margin -->
-    <h1>&nbsp;</h1>
-    <h1>&nbsp;</h1>
-    <!-- margin -->
-    <div class="row">
+    <div class="row" id="form-login">
       <div class="col-md-4 col-md-offset-4">
         <div class="panel panel-default">
           <div class="panel-heading text-center">
