--- a/layout/footer.phtml
+++ b/layout/footer.phtml
@@ -7,6 +7,7 @@
   <!-- #page -->
   <script src="<?= get_base_url('assets/js/jquery.js');?>"></script>
   <script src="<?= get_base_url('assets/js/bootstrap.min.js');?>"></script>
+  <script src="<?= get_base_url('assets/js/jquery.autocomplete.min.js');?>"></script>
   <script src="<?= get_base_url('assets/js/app.js');?>"></script>
 </body>
 </html>
